--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
-      - uses: LopesA95/LopesA95
+      - uses: LopesA95/snk@master
         id: snake-gif
         with:
           github_user_name: LopesA95
