--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
-      - uses: Sutil/snk@blue-snake
+      - uses: lopesa95/snk@blue-snake
         id: snake-gif
         with:
-          github_user_name: Sutil
+          github_user_name: lopesa95
           svg_out_path: dist/github-contribution-grid-snake2.svg
           l1: '#6229e6'
           l2: '#8257e6'
